// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer should render correctly 1`] = `
<div>
  <div
    class="sc-AykKH lkPDtk"
    direction="vertical"
    width="100%"
  >
    <p
      aria-atomic="true"
      aria-label="Thicken Sauce"
      class="sc-AykKG jBmvtL"
      font-size="32"
      id="timer-1"
      role="timer"
    >
      10
      m 
      0
      s
    </p>
    <div
      class="sc-AykKH cRsFPk"
      direction="horizontal"
    >
      <button
        aria-controls="timer-1"
        class="sc-AykKC hYfwNR"
        width="47px"
      >
        START
      </button>
      <button
        class="sc-AykKC dAUeMx"
        color="secondaryTextColor"
      >
        RESET
      </button>
    </div>
  </div>
</div>
`;

exports[`Timer should render correctly when type is notification 1`] = `
<div>
  <div
    class="sc-AykKH cKRlwi"
    direction="horizontal"
    width="100%"
  >
    <p
      aria-atomic="true"
      aria-label="Thicken Sauce"
      class="sc-AykKG hCeYPE"
      font-size="24"
      id="timer-1"
      role="timer"
    >
      10
      m 
      0
      s
    </p>
    <div
      class="sc-AykKH cRsFPk"
      direction="horizontal"
    >
      <button
        aria-controls="timer-1"
        class="sc-AykKC hYfwNR"
        width="47px"
      >
        START
      </button>
      <button
        class="sc-AykKC dAUeMx"
        color="secondaryTextColor"
      >
        RESET
      </button>
    </div>
  </div>
</div>
`;
